feat: shutdown internal mysql server

--- a/k8s/casa/apps/myownradio/kustomization.yaml
+++ b/k8s/casa/apps/myownradio/kustomization.yaml
@@ -13,10 +13,10 @@ resources:
   - myownradio-dockerconfig-sealedsecret.yaml
 
   # mysql
-  - myownradio-mysql-deployment.yaml
-  - myownradio-mysql-service.yaml
-  - myownradio-mysql-pvc.yaml
-  - myownradio-mysql-configmap.yaml
+#  - myownradio-mysql-deployment.yaml
+#  - myownradio-mysql-service.yaml
+#  - myownradio-mysql-pvc.yaml
+#  - myownradio-mysql-configmap.yaml
 
   # server
   - myownradio-server-deployment.yaml
