--- a/k8s/casa/bootstrap/apps/prometheus.yaml
+++ b/k8s/casa/bootstrap/apps/prometheus.yaml
@@ -16,6 +16,11 @@ spec:
       parameters:
         - name: server.strategy.type
           value: Recreate
+        - name: extraScrapeConfigs
+          value: |
+            - job_name: "oracle-nodes"
+              static_configs:
+                - targets: [ "143.47.51.192:9100", "143.47.49.55:9100" ]
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: default
