set terminationGracePeriodSeconds to 7200 seconds

--- a/k8s/casa/apps/myownradio/myownradio-streamer-deployment.yaml
+++ b/k8s/casa/apps/myownradio/myownradio-streamer-deployment.yaml
@@ -41,3 +41,4 @@ spec:
               value: "7200"
       imagePullSecrets:
         - name: dockerconfig
+      terminationGracePeriodSeconds: 7200
