add preStop hook

--- a/k8s/casa/apps/myownradio/myownradio-streamer-deployment.yaml
+++ b/k8s/casa/apps/myownradio/myownradio-streamer-deployment.yaml
@@ -42,3 +42,6 @@ spec:
       imagePullSecrets:
         - name: dockerconfig
       terminationGracePeriodSeconds: 7200
+      preStop:
+        exec:
+          command: ["/bin/sh", "-c", "kill -SIGUSR1 1"]
