move preStop hook to pod/lifecycle

--- a/k8s/casa/apps/myownradio/myownradio-streamer-deployment.yaml
+++ b/k8s/casa/apps/myownradio/myownradio-streamer-deployment.yaml
@@ -39,9 +39,10 @@ spec:
                   key: RADIO_STREAMER_TOKEN
             - name: SHUTDOWN_TIMEOUT
               value: "7200"
+          lifecycle:
+            preStop:
+              exec:
+                command: ["/bin/sh", "-c", "kill -SIGUSR1 1"]
       imagePullSecrets:
         - name: dockerconfig
       terminationGracePeriodSeconds: 7200
-      preStop:
-        exec:
-          command: ["/bin/sh", "-c", "kill -SIGUSR1 1"]
