introduce `ASSETS_MANIFEST_URL` environment variable

--- a/k8s/casa/apps/myownradio/myownradio-server-deployment.yaml
+++ b/k8s/casa/apps/myownradio/myownradio-server-deployment.yaml
@@ -142,6 +142,8 @@ spec:
                   key: FILE_SERVER_OWN_ADDRESS
             - name: STORAGE_BACKEND
               value: local
+            - name: ASSETS_MANIFEST_URL
+              value: "https://myownradio.biz/assets/assets-manifest.json"
           volumeMounts:
             - mountPath: "/app/storage"
               name: myownradio-server-storage
