--- a/k8s/casa/apps/myownradio/myownradio-server-configmap.yaml
+++ b/k8s/casa/apps/myownradio/myownradio-server-configmap.yaml
@@ -9,7 +9,7 @@ data:
   BACKEND_STORAGE_LOCAL_DIR: /app/storage
   RADIO_STREAMER_ENDPOINT: https://myownradio.biz/r
   RADIO_STREAMER_INTERNAL_ENDPOINT: http://myownradio-streamer:8080
-  WEB_SERVER_OWN_ADDRESS: https://myownradio.biz
+  WEB_SERVER_OWN_ADDRESS: https://old.myownradio.biz
   FILE_SERVER_OWN_ADDRESS: https://fs1.myownradio.biz
   S3_BUCKET: myownradio-storage
   S3_REGION: eu-central-1
