--- a/k8s/casa/apps/myownradio/myownradio-server-deployment.yaml
+++ b/k8s/casa/apps/myownradio/myownradio-server-deployment.yaml
@@ -143,7 +143,7 @@ spec:
             - name: STORAGE_BACKEND
               value: local
             - name: ASSETS_MANIFEST_URL
-              value: "https://old.myownradio.biz/assets/assets-manifest.json"
+              value: "https://myownradio.biz/assets/assets-manifest.json"
           volumeMounts:
             - mountPath: "/app/storage"
               name: myownradio-server-storage
