--- a/k8s/casa/apps/myownradio/myownradio-streamer-deployment.yaml
+++ b/k8s/casa/apps/myownradio/myownradio-streamer-deployment.yaml
@@ -28,6 +28,8 @@ spec:
           env:
             - name: LOG_LEVEL
               value: Debug
+            - name: RUST_LOG
+              value: debug
             - name: BIND_ADDRESS
               value: 0.0.0.0:8080
             - name: MOR_BACKEND_URL
