--- a/k8s/homefs.biz/apps/superorder-old/app.yaml
+++ b/k8s/homefs.biz/apps/superorder-old/app.yaml
@@ -8,7 +8,7 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`coins1.homefs.biz`)
+      match: Host(`coins1.pyldin601.dev`)
       services:
         - kind: Service
           name: app
