Rename domain myownradio.biz to radioter.io

--- a/k8s/casa/apps/myownradio/myownradio-fileserver-ingressroute.yaml
+++ b/k8s/casa/apps/myownradio/myownradio-fileserver-ingressroute.yaml
@@ -9,7 +9,7 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`fs1.myownradio.biz`)
+      match: Host(`fs1.radioter.io`)
       services:
         - kind: Service
           name: myownradio-fileserver
