--- a/k8s/casa/apps/myownradio/myownradio-server-configmap.yaml
+++ b/k8s/casa/apps/myownradio/myownradio-server-configmap.yaml
@@ -7,9 +7,9 @@ data:
   MEDIAINFO_PATH: mediainfo
   SENTRY_DSN: https://2a74df546ce14acbb01fd71f1d00dfe7@sentry.io/2518976
   BACKEND_STORAGE_LOCAL_DIR: /app/storage
-  RADIO_STREAMER_ENDPOINT: https://myownradio.biz/r
+  RADIO_STREAMER_ENDPOINT: https://radioter.io/r
   RADIO_STREAMER_INTERNAL_ENDPOINT: http://myownradio-streamer:8080
-  WEB_SERVER_OWN_ADDRESS: https://myownradio.biz
-  FILE_SERVER_OWN_ADDRESS: https://fs1.myownradio.biz
+  WEB_SERVER_OWN_ADDRESS: https://radioter.io
+  FILE_SERVER_OWN_ADDRESS: https://fs1.radioter.io
   S3_BUCKET: myownradio-storage
   S3_REGION: eu-central-1
