Install external transmission-rpc service

--- a/k8s/casa/bootstrap/kustomization.yaml
+++ b/k8s/casa/bootstrap/kustomization.yaml
@@ -20,6 +20,7 @@ resources:
   - resources/sealed-secrets.yaml
   - resources/traefik-config.yaml
   - resources/external-endpoints.yaml
+  - resources/transmission-rpc.yaml
 
   # ArgoCD
   - argocd/argocd-server-ingressroute.yaml
