--- a/k8s/casa/apps/myownradio/myownradio-channel-bot.yaml
+++ b/k8s/casa/apps/myownradio/myownradio-channel-bot.yaml
@@ -1,4 +1,16 @@
 ---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: channel-bot-storage
+spec:
+  storageClassName: local-path
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 8Gi
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
