--- a/k8s/casa/apps/myownradio/myownradio-channel-bot.yaml
+++ b/k8s/casa/apps/myownradio/myownradio-channel-bot.yaml
@@ -75,6 +75,8 @@ spec:
                 secretKeyRef:
                   name: channel-bot-secret
                   key: OPENAI_API_KEY
+            - name: RUST_LOG
+              value: debug
           volumeMounts:
             - mountPath: "/var/lib/torrent-bot/storage"
               name: channel-bot-storage
