Set RUST_LOG=trace

--- a/k8s/casa/apps/myownradio/myownradio-channel-bot.yaml
+++ b/k8s/casa/apps/myownradio/myownradio-channel-bot.yaml
@@ -76,7 +76,7 @@ spec:
                   name: channel-bot-secret
                   key: OPENAI_API_KEY
             - name: RUST_LOG
-              value: debug
+              value: trace
           volumeMounts:
             - mountPath: "/var/lib/torrent-bot/storage"
               name: channel-bot-storage
