Disable channel-bot

--- a/k8s/casa/apps/myownradio/kustomization.yaml
+++ b/k8s/casa/apps/myownradio/kustomization.yaml
@@ -43,4 +43,4 @@ resources:
 
   # channel-bot
   - myownradio-channel-bot-sealedsecret.yaml
-  - myownradio-channel-bot.yaml
+#  - myownradio-channel-bot.yaml
