Temporarily rename ingress route

--- a/k8s/casa/apps/myownradio/radiomanager-frontend.yaml
+++ b/k8s/casa/apps/myownradio/radiomanager-frontend.yaml
@@ -45,7 +45,7 @@ spec:
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: radiomanager-frontend
+  name: radiomanager-frontend2
   namespace: myownradio
 spec:
   entryPoints:
