Use /new prefix without ending slash

--- a/k8s/casa/apps/myownradio/radiomanager-frontend.yaml
+++ b/k8s/casa/apps/myownradio/radiomanager-frontend.yaml
@@ -52,7 +52,7 @@ spec:
     - websecure
   routes:
     - kind: Rule
-      match: Host(`radioter.io`) && PathPrefix(`/new/`)
+      match: Host(`radioter.io`) && PathPrefix(`/new`)
       middlewares: []
       services:
         - kind: Service
