--- a/k8s/casa/bootstrap/resources/external-endpoints.yaml
+++ b/k8s/casa/bootstrap/resources/external-endpoints.yaml
@@ -24,3 +24,29 @@ spec:
       targetPort: 3306
       nodePort: 0
   selector: {}
+---
+apiVersion: v1
+kind: Endpoints
+metadata:
+  name: local-mysql-server
+  namespace: default
+subsets:
+  - addresses:
+      - ip: 127.0.0.1
+    ports:
+      - name: mysql
+        port: 3306
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: local-mysql-server
+  namespace: default
+spec:
+  ports:
+    - name: mysql
+      port: 3306
+      protocol: TCP
+      targetPort: 3306
+      nodePort: 0
+  selector: {}
