Introduce mysql-migration-job

--- a/k8s/casa/apps/myownradio/kustomization.yaml
+++ b/k8s/casa/apps/myownradio/kustomization.yaml
@@ -17,6 +17,7 @@ resources:
   - myownradio-mysql-service.yaml
   - myownradio-mysql-pvc.yaml
   - myownradio-mysql-configmap.yaml
+  - mysql-migration-job.yaml
 
   # server
   - myownradio-server-deployment.yaml
