--- a/k8s/casa/apps/myownradio/myownradio-mysql-configmap.yaml
+++ b/k8s/casa/apps/myownradio/myownradio-mysql-configmap.yaml
@@ -1,8 +1,9 @@
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: myownradio-mysql-configmap
 data:
-  username: mor
-  password: mor
-  database: mor
+  username: "mor"
+  password: "mor"
+  database: "mor"
