Add image tag to suffix to job name

--- a/k8s/casa/apps/myownradio/mysql-migration-job.yaml
+++ b/k8s/casa/apps/myownradio/mysql-migration-job.yaml
@@ -2,7 +2,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: mysql-migration-job
+  name: mysql-migration-job-23.09.6087040522-aa04e93
 spec:
   completions: 1
   parallelism: 1
