Create MySQL Database Backup CronJob skeleton

--- a/k8s/casa/apps/myownradio/kustomization.yaml
+++ b/k8s/casa/apps/myownradio/kustomization.yaml
@@ -18,6 +18,7 @@ resources:
   - myownradio-mysql-pvc.yaml
   - myownradio-mysql-configmap.yaml
   - mysql-migration-job.yaml
+  - mysql-database-backup.yaml
 
   # server
   - myownradio-server-deployment.yaml
