Add missing plugin

--- a/k8s/casa/apps/myownradio/mysql-database-backup.yaml
+++ b/k8s/casa/apps/myownradio/mysql-database-backup.yaml
@@ -35,6 +35,6 @@ spec:
               command: ["/bin/sh", "-c"]
               args:
                 - |
-                  apk add git mysql-client
+                  apk add git mysql-client mariadb-connector-c-dev
                   mysqldump -h$MYSQL_HOST -u$MYSQL_USER -p$MYSQL_PASSWORD $MYSQL_DB > myownradio_mysql_backup.sql
           restartPolicy: OnFailure
