Install Hashicorp Vault with Secrets Injector

--- a/k8s/casa/bootstrap/kustomization.yaml
+++ b/k8s/casa/bootstrap/kustomization.yaml
@@ -21,6 +21,7 @@ resources:
   - resources/traefik-config.yaml
   - resources/external-endpoints.yaml
   - resources/transmission-rpc.yaml
+  - resources/hashicorp-vault.yaml
 
   # ArgoCD
   - argocd/argocd-server-ingressroute.yaml
