--- a/k8s/casa/apps/myownradio/mysql-database-backup.yaml
+++ b/k8s/casa/apps/myownradio/mysql-database-backup.yaml
@@ -3,6 +3,7 @@ kind: Job
 apiVersion: batch/v1
 metadata:
   name: mysql-backup-cronjob-1
+  namespace: myownradio
 spec:
 #  successfulJobsHistoryLimit: 2
 #  failedJobsHistoryLimit: 0
@@ -13,8 +14,7 @@ spec:
         metadata:
           annotations:
             vault.hashicorp.com/agent-inject: "true"
-            vault.hashicorp.com/role: "k8s"
-#            vault.hashicorp.com/agent-inject-secret-creds: "secret/myownradio/mysql-database-backup"
+            vault.hashicorp.com/role: "app"
         spec:
           containers:
             - name: mysql-backup
@@ -37,8 +37,8 @@ spec:
                   configMapKeyRef:
                     name: myownradio-mysql-configmap
                     key: password
-              - name: GITHUB_TOKEN
-                value: vault:secret/myownradio/mysql-database-backup
+#              - name: GITHUB_TOKEN
+#                value: vault:secret/myownradio/mysql-database-backup
               command: ["/bin/sh", "-c"]
               args:
                 - |
