--- a/k8s/casa/bootstrap/resources/hashicorp-vault.yaml
+++ b/k8s/casa/bootstrap/resources/hashicorp-vault.yaml
@@ -14,6 +14,8 @@ spec:
       parameters:
         - name: server.dev.enabled
           value: "false"
+        - name: server.logLevel
+          value: "debug"
   destination:
     namespace: kube-system
     server: https://kubernetes.default.svc
