Enable debug log level

--- a/k8s/casa/bootstrap/resources/hashicorp-vault.yaml
+++ b/k8s/casa/bootstrap/resources/hashicorp-vault.yaml
@@ -16,6 +16,8 @@ spec:
           value: "false"
         - name: server.logLevel
           value: "debug"
+        - name: injector.logLevel
+          value: "debug"
   destination:
     namespace: kube-system
     server: https://kubernetes.default.svc
