Deploy vault into default namespace

--- a/k8s/casa/bootstrap/resources/hashicorp-vault.yaml
+++ b/k8s/casa/bootstrap/resources/hashicorp-vault.yaml
@@ -19,7 +19,7 @@ spec:
         - name: injector.logLevel
           value: "debug"
   destination:
-    namespace: kube-system
+    namespace: default
     server: https://kubernetes.default.svc
   syncPolicy:
     automated:
