--- a/k8s/casa/bootstrap/resources/vault-operator.yaml
+++ b/k8s/casa/bootstrap/resources/vault-operator.yaml
@@ -7,17 +7,17 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: 'https://helm.releases.hashicorp.com'
-    targetRevision: "0.25.0"
-    chart: vault
-    helm:
-      parameters:
-        - name: server.dev.enabled
-          value: "false"
-        - name: server.logLevel
-          value: "debug"
-        - name: injector.logLevel
-          value: "debug"
+    repoURL: "https://kubernetes-charts.banzaicloud.com"
+    targetRevision: "1.16.1"
+    chart: vault-operator
+#    helm:
+#      parameters:
+#        - name: server.dev.enabled
+#          value: "false"
+#        - name: server.logLevel
+#          value: "debug"
+#        - name: injector.logLevel
+#          value: "debug"
   destination:
     namespace: default
     server: https://kubernetes.default.svc
