--- a/k8s/casa/apps/myownradio/mysql-database-backup.yaml
+++ b/k8s/casa/apps/myownradio/mysql-database-backup.yaml
@@ -2,7 +2,7 @@
 kind: Job
 apiVersion: batch/v1
 metadata:
-  name: mysql-backup-cronjob-7
+  name: mysql-backup-cronjob-13
   namespace: myownradio
 spec:
 #  successfulJobsHistoryLimit: 2
@@ -15,9 +15,14 @@ spec:
           annotations:
             vault.security.banzaicloud.io/enabled: "true"
             vault.security.banzaicloud.io/vault-role: "app"
-#            vault.hashicorp.com/agent-inject: "true"
-#            vault.hashicorp.com/role: "app"
-#            vault.hashicorp.com/agent-inject-secret-envs: "secret/myownradio/mysql-database-backup"
+            vault.security.banzaicloud.io/vault-addr: "https://vault.default.svc.cluster.local:8200"
+            vault.hashicorp.com/agent-inject: "true"
+            vault.hashicorp.com/role: "app"
+            vault.hashicorp.com/agent-inject-secret-envs: "kv/myownradio/mysql-database-backup"
+            vault.hashicorp.com/agent-inject-template-envs: |
+              {{- with secret "kv/myownradio/mysql-database-backup" -}}
+                export GITHUB_TOKEN={{ .Data.data.GITHUB_TOKEN }}
+              {{- end -}}
         spec:
           containers:
             - name: mysql-backup
@@ -40,13 +45,13 @@ spec:
                   configMapKeyRef:
                     name: myownradio-mysql-configmap
                     key: password
-              - name: GITHUB_TOKEN
-                value: vault:secret/myownradio/mysql-database-backup#GITHUB_TOKEN
               command: ["/bin/sh", "-c"]
               args:
                 - |
+                  source /vault/secrets/envs
                   apk add git mysql-client mariadb-connector-c-dev
                   mysqldump --no-tablespaces -h$MYSQL_HOST -u$MYSQL_USER -p$MYSQL_PASSWORD $MYSQL_DB > myownradio_mysql_backup.sql
                   ls -l
                   echo $GITHUB_TOKEN
+                  env
           restartPolicy: OnFailure
