--- a/k8s/casa/apps/myownradio/mysql-database-backup.yaml
+++ b/k8s/casa/apps/myownradio/mysql-database-backup.yaml
@@ -2,7 +2,7 @@
 kind: Job
 apiVersion: batch/v1
 metadata:
-  name: mysql-backup-cronjob-13
+  name: mysql-backup-cronjob-14
   namespace: myownradio
 spec:
 #  successfulJobsHistoryLimit: 2
@@ -13,13 +13,10 @@ spec:
       template:
         metadata:
           annotations:
-            vault.security.banzaicloud.io/enabled: "true"
-            vault.security.banzaicloud.io/vault-role: "app"
-            vault.security.banzaicloud.io/vault-addr: "https://vault.default.svc.cluster.local:8200"
             vault.hashicorp.com/agent-inject: "true"
             vault.hashicorp.com/role: "app"
-            vault.hashicorp.com/agent-inject-secret-envs: "kv/myownradio/mysql-database-backup"
-            vault.hashicorp.com/agent-inject-template-envs: |
+            vault.hashicorp.com/agent-inject-secret-exports: "kv/myownradio/mysql-database-backup"
+            vault.hashicorp.com/agent-inject-template-exports: |
               {{- with secret "kv/myownradio/mysql-database-backup" -}}
                 export GITHUB_TOKEN={{ .Data.data.GITHUB_TOKEN }}
               {{- end -}}
@@ -48,10 +45,10 @@ spec:
               command: ["/bin/sh", "-c"]
               args:
                 - |
-                  source /vault/secrets/envs
+                  source /vault/secrets/exports
                   apk add git mysql-client mariadb-connector-c-dev
+                  git clone https://pyldin601:"$GITHUB_TOKEN"@github.com/myownradio/mysql-database-backup.git
+                  cd mysql-database-backup
                   mysqldump --no-tablespaces -h$MYSQL_HOST -u$MYSQL_USER -p$MYSQL_PASSWORD $MYSQL_DB > myownradio_mysql_backup.sql
-                  ls -l
-                  echo $GITHUB_TOKEN
-                  env
+                  git status
           restartPolicy: OnFailure
