--- a/k8s/casa/apps/myownradio/mysql-database-backup.yaml
+++ b/k8s/casa/apps/myownradio/mysql-database-backup.yaml
@@ -2,7 +2,7 @@
 kind: Job
 apiVersion: batch/v1
 metadata:
-  name: mysql-backup-cronjob-14
+  name: mysql-backup-cronjob-17
   namespace: myownradio
 spec:
 #  successfulJobsHistoryLimit: 2
@@ -47,8 +47,13 @@ spec:
                 - |
                   source /vault/secrets/exports
                   apk add git mysql-client mariadb-connector-c-dev
+                  git config --global user.email "hello@pyldin601.dev"
+                  git config --global user.name "Backup Bot"    
                   git clone https://pyldin601:"$GITHUB_TOKEN"@github.com/myownradio/mysql-database-backup.git
                   cd mysql-database-backup
                   mysqldump --no-tablespaces -h$MYSQL_HOST -u$MYSQL_USER -p$MYSQL_PASSWORD $MYSQL_DB > myownradio_mysql_backup.sql
-                  git status
+                  git add myownradio_mysql_backup.sql
+                  git commit -m "Adding new database backup"
+                  git push
+                  exit 0
           restartPolicy: OnFailure
