--- a/k8s/casa/apps/myownradio/mysql-database-backup.yaml
+++ b/k8s/casa/apps/myownradio/mysql-database-backup.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   successfulJobsHistoryLimit: 2
   failedJobsHistoryLimit: 0
-  schedule: "0 0 * * *"
+  schedule: "0 12 * * *"
   jobTemplate:
     spec:
       template:
@@ -15,6 +15,7 @@ spec:
           annotations:
             vault.hashicorp.com/agent-inject: "true"
             vault.hashicorp.com/role: "app"
+            vault.hashicorp.com/agent-pre-populate-only : "true"
             vault.hashicorp.com/agent-inject-secret-exports: "kv/myownradio/mysql-database-backup"
             vault.hashicorp.com/agent-inject-template-exports: |
               {{- with secret "kv/myownradio/mysql-database-backup" -}}
