--- a/k8s/casa/bootstrap/kustomization.yaml
+++ b/k8s/casa/bootstrap/kustomization.yaml
@@ -22,6 +22,7 @@ resources:
   - resources/external-endpoints.yaml
   - resources/transmission-rpc.yaml
   - resources/vault-operator.yaml
+  - resources/datadog.yaml
 
   # ArgoCD
   - argocd/argocd-server-ingressroute.yaml
