Enable logs collection

--- a/k8s/casa/bootstrap/resources/datadog.yaml
+++ b/k8s/casa/bootstrap/resources/datadog.yaml
@@ -16,6 +16,10 @@ spec:
           value: "datadoghq.eu"
         - name: datadog.apiKeyExistingSecret
           value: "datadog-api-key"
+        - name: logs.enabled
+          value: "true"
+        - name: logs.containerCollectAll
+          value: "true"
   destination:
     namespace: default
     server: https://kubernetes.default.svc
